--- a/src/main/resources/static/app/views/setup/transductor/transductorInstallationWizardContent.html
+++ b/src/main/resources/static/app/views/setup/transductor/transductorInstallationWizardContent.html
@@ -26,7 +26,7 @@
 						data-size="7">
 						<option
 							ng-repeat="property in InstallTransductorController.getSupportedProperties()"
-							ng-value="property.getName()">{{property.getName()}}</option>
+							ng-value="property.getNameWithUnit()">{{property.getNameWithUnit()}}</option>
 					</select>
 					                   
                     </div>
