--- a/src/main/resources/static/app/views/dashboard.html
+++ b/src/main/resources/static/app/views/dashboard.html
@@ -53,6 +53,7 @@ Coded by www.creative-tim.com
 		
 		<!-- Application module config (SPA routes, dependencies injection) -->
 		<script type="text/javascript" src="/app/app.js"></script>
+		<script type="text/javascript" src="/app/modules.js"></script>
 		<script type="text/javascript" src="/app/routes.js"></script>
 		<script type="text/javascript" src="/app/loaderbar.js"></script>
 		
@@ -60,7 +61,14 @@ Coded by www.creative-tim.com
 		<script type="text/javascript" src="/app/directives/directives.js"></script>
 		
 		<!-- Controllers -->
-		<script type="text/javascript" src="/app/controllers/GetTransductorsControllers.js"></script>
+		<script type="text/javascript" src="/app/controllers/GetSensorsController.js"></script>
+		<script type="text/javascript" src="/app/controllers/GetActuatorsController.js"></script>
+		<script type="text/javascript" src="/app/controllers/GetIotAssistantController.js"></script>
+		<script type="text/javascript" src="/app/controllers/GetNotificationsController.js"></script>
+		<script type="text/javascript" src="/app/controllers/GetChartsController.js"></script>
+		<script type="text/javascript" src="/app/controllers/GetCamerasController.js"></script>
+		<script type="text/javascript" src="/app/controllers/GetSensorRulesController.js"></script>
+		<script type="text/javascript" src="/app/controllers/PowerOffSystemController.js"></script>
 		<script type="text/javascript" src="/app/controllers/setup/InstallTransductorController.js"></script>
 		<script type="text/javascript" src="/app/controllers/setup/InstallSensorController.js"></script>
 		<script type="text/javascript" src="/app/controllers/setup/InstallActuatorController.js"></script>
@@ -71,12 +79,6 @@ Coded by www.creative-tim.com
 		<script type="text/javascript" src="/app/controllers/setup/InstallEnableRuleSensorRuleController.js"></script>
 		<script type="text/javascript" src="/app/controllers/setup/InstallTriggerActuatorSensorRuleController.js"></script>
 		<script type="text/javascript" src="/app/controllers/setup/InstallCameraSensorRuleController.js"></script>	
-		<script type="text/javascript" src="/app/controllers/GetIotAssistantController.js"></script>
-		<script type="text/javascript" src="/app/controllers/GetNotificationsController.js"></script>
-		<script type="text/javascript" src="/app/controllers/GetChartsController.js"></script>
-		<script type="text/javascript" src="/app/controllers/GetCamerasController.js"></script>
-		<script type="text/javascript" src="/app/controllers/GetSensorRulesController.js"></script>
-		<script type="text/javascript" src="/app/controllers/PowerOffSystemController.js"></script>
 		
 		<!-- Services -->
 		<script type="text/javascript" src="/app/services/IotAssistantAPIService.js"></script>
