--- a/src/main/resources/static/app/views/shared/sidebarNav.html
+++ b/src/main/resources/static/app/views/shared/sidebarNav.html
@@ -55,31 +55,31 @@
             <div class="collapse" id="setupList">
               <ul class="nav">
                 <li>
-                  <a href="#/sensorInstallation">
+                  <a href="#/installSensor">
                     <span class="sidebar-mini-icon">IS</span>
                     <span class="sidebar-normal">Install sensor</span>
                   </a>
                 </li>
                 <li>
-                  <a href="#/actuatorInstallation">
+                  <a href="#/installActuator">
                     <span class="sidebar-mini-icon">IA</span>
                     <span class="sidebar-normal">Install actuator</span>
                   </a>
                 </li>
                 <li>
-                  <a href="#/chartInstallation">
+                  <a href="#/installChart">
                     <span class="sidebar-mini-icon">CH</span>
                     <span class="sidebar-normal">Install chart</span>
                   </a>
                 </li>
                 <li>
-                  <a href="#/sensorRuleInstallation">
+                  <a href="#/installSensorRule">
                     <span class="sidebar-mini-icon">SR</span>
                     <span class="sidebar-normal">Install sensor rule</span>
                   </a>
                 </li>
                 <li>
-                  <a href="#/cameraInstallation">
+                  <a href="#/installCamera">
                     <span class="sidebar-mini-icon">SR</span>
                     <span class="sidebar-normal">Install camera</span>
                   </a>
