--- a/src/main/resources/static/app/assets/css/paper-dashboard.css
+++ b/src/main/resources/static/app/assets/css/paper-dashboard.css
@@ -7246,10 +7246,10 @@ License - nucleoapp.com/license/
 }
 
 /*------------------------------
-	Sensor Inactive 
+	Transductor Inactive 
 -------------------------------*/
 
-.sensor-inactive {
+.transductor-inactive {
    color: #ae0000;
    font-size: 70%;
    
