--- a/src/main/resources/static/app/assets/css/paper-dashboard.css
+++ b/src/main/resources/static/app/assets/css/paper-dashboard.css
@@ -7312,7 +7312,7 @@ License - nucleoapp.com/license/
   color: #51cbce !important; }
   
 .nc-mqtt::before {
-  content: "\ea43";
+  content: "\ea1e";
 }
 
 .nc-pin::before {
